Sat Mar  8 21:00:07 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/powerpanel: backport from the trunk (now includes support
   for the CyberPower OP series)

Sat Mar  8 20:01:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsc.c: reverse this change from r1322, that causes upsc
   to segfault when running it with the -l or -L options

Thu Mar  6 20:45:49 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - scripts/Makefile.am: this completes the backport of HAL support
   from the trunk

Wed Mar  5 22:01:06 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - scripts/hal/ups-nut-device.fdi: name was changed

Wed Mar  5 21:16:30 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - fix HAL support [Alioth Bug #304156] (backport from r1294)
 - only include target specific CFLAGS and LDFLAGS only if target is
   actually used (backport from r1296 and r1297)
 - add netxml-ups driver

Sat Mar  1 19:24:09 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/liebert-hid.c: Add support for some additional params.

Sat Mar  1 19:01:16 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: Use strtok_r() instead of strtok(), so that
   we don't accidentally interfer with the caller (strtok() is not
   guaranteed to be reentrant).

Mon Feb 25 20:38:45 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/hidparser.c: Allocate twice the maximum number of reports
   we expect (MAX_REPORTS), to allow for bogus/duplicate reports.

Mon Feb 25 12:34:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * data/driver.list:
   - add APC BACK-UPS XS LCD (reported by Chad Miller), (backport from trunk)
   - USB completion for Powerware (for PW5115 and PW9120)

Fri Feb 22 19:14:04 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/*.c: The upscli_disconnect() function does no longer LOGOUT
   from the server. Adding this to the clients that use this to prevent
   the server from logging warnings.
